Open Graph Data

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
     <title>Portfolio</title>
     <meta name="description" content="Portfolio for newbie engineer Ryuji">
     <meta name="author" content="Ryuji">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <!-- OG -->
+    <meta property="og:title" content="Ryuji's Portfolio">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="배포 후 생성된 URL">
+    <meta property="og:image" content="배포 후에 생성된 이미지 URL">
 </head>
 
 <body>
