Google Fonts setup

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="배포 후 생성된 URL">
     <meta property="og:image" content="배포 후에 생성된 이미지 URL">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
