폴더 구조 잡기

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/8698bbbb02.js" crossorigin="anonymous"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- JavaScript -->
+    <script src="src/main.js"></script>
 </head>
 
 <body>
