--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Header -->
     <header>
         <div>
-            <img src="images/profile.png" alt="logo">
+            <img src="images/profile-round.png" alt="logo">
             <h1><a href="#">Ryuji</a></h1>
         </div>
         <nav>
@@ -47,7 +47,12 @@
     <!-- Main -->
     <main>
         <!-- Home -->
-        <section id="home"></section>
+        <section id="home">
+            <img src="images/profile.png" alt="Ryuji's profile">
+            <h2>Hello I&#39;m Dream Coder, Ryuji</h2>
+            <p>A new front-end developer in Gunpo, South Korea</p>
+            <a href="#contact">Contact Me</a>
+        </section>
         <!-- About -->
         <section id="about"></section>
         <!-- Skills -->
