--- a/index.html
+++ b/index.html
@@ -50,11 +50,52 @@
         <section id="home">
             <img src="images/profile.png" alt="Ryuji's profile">
             <h2>Hello I&#39;m Dream Coder, Ryuji</h2>
-            <p>A new front-end developer in Gunpo, South Korea</p>
+            <p>A new Software Engineer in Gunpo, South Korea</p>
             <a href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about"></section>
+        <section id="about">
+            <h2>About me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis mattis est. Pellentesque habitant
+                morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque sollicitudin nunc
+                non nunc pellentesque dignissim. In hac habitasse platea dictumst. Suspendisse cursus ligula eget
+                elementum feugiat. Quisque a justo egestas, varius turpis non, fermentum metus. Duis aliquam elementum
+                sodales. Ut id sem et velit pretium semper ac eget lectus. Morbi nec nisi vitae ante semper ultricies
+                tincidunt nec lectus.</p>
+            <ul>
+                <li>
+                    <i class="fa-brands fa-square-js"></i>
+                    <p>Front-end</p>
+                    <p>HTML, CSS, JavaScript, TypeScript, React, NextJs</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-mobile"></i>
+                    <p>Mobile</p>
+                    <p>Android, iOS, React Navtive, Flutter, Java, Swift, Kotlin</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-server"></i>
+                    <p>Back-end</p>
+                    <p>Java, JavaScript, NodeJs, Rest APIs</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <img src="images/jobs/google.png" alt="google logo">
+                    <div>
+                        <p>Google as Software Engineer</p>
+                        <p>2023 Jan - Unitil now</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/jobs/samsung.png" alt="samsung logo">
+                    <div>
+                        <p>Samsung as Software Engineer</p>
+                        <p>2022 Jun - 2022 Dec</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
         <!-- Skills -->
         <section id="skills"></section>
         <!-- Work -->
