--- a/index.html
+++ b/index.html
@@ -97,7 +97,94 @@
             </ul>
         </section>
         <!-- Skills -->
-        <section id="skills"></section>
+        <section id="skills">
+            <h2>My Skills</h2>
+            <p>Skills & Attributes</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, sequi fuga! Optio tenetur qui, aspernatur
+                saepe nulla dolorum ea repellendus totam vitae autem sapiente, excepturi dicta debitis, placeat vel?
+                Facere?
+            </p>
+            <div>
+                <section>
+                    <h3>Coding Skills</h3>
+                    <ul>
+                        <li>
+                            <div>
+                                <span>HTML</span>
+                                <span>95%</span>
+                            </div>
+                            <div>
+                                <div style="width: 98%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <span>CSS</span>
+                                <span>90%</span>
+                            </div>
+                            <div>
+                                <div style="width: 98%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <span>JavaScript</span>
+                                <span>90%</span>
+                            </div>
+                            <div>
+                                <div style="width: 98%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <span>TypeScript</span>
+                                <span>80%</span>
+                            </div>
+                            <div>
+                                <div style="width: 98%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <span>React</span>
+                                <span>75%</span>
+                            </div>
+                            <div>
+                                <div style="width: 98%"></div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <span>NodeJs</span>
+                                <span>70%</span>
+                            </div>
+                            <div>
+                                <div style="width: 98%"></div>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Tools</h3>
+                    <ul>
+                        <li>Visual Studio Code</li>
+                        <li>IntelliJ</li>
+                        <li>Android Studio Code</li>
+                        <li>iOS development tools</li>
+                        <li>Sketch app</li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>Etc</h3>
+                    <ul>
+                        <li>Git</li>
+                        <li>Scrum Master</li>
+                        <li>Figma</li>
+                    </ul>
+                </section>
+            </div>
+        </section>
         <!-- Work -->
         <section id="work"></section>
         <!-- Testimonials -->
