--- a/index.html
+++ b/index.html
@@ -200,62 +200,100 @@
                         <img src="images/projects/project1.webp" alt="project1">
                         <div>
                             <h3>Project #1</h3>
-                            <p>Clone Coding with HTML, CSS</p>
+                            <p>Clone Coding with HTML, CSS, JavaScript</p>
                         </div>
                     </a></li>
                 <li><a href="#" target="_blank">
                         <img src="images/projects/project2.webp" alt="project2">
                         <div>
                             <h3>Project #2</h3>
-                            <p>Clone Coding with HTML, CSS</p>
+                            <p>Clone Coding with HTML, CSS, JavaScript</p>
                         </div>
                     </a></li>
                 <li><a href="#" target="_blank">
                         <img src="images/projects/project3.webp" alt="project3">
                         <div>
                             <h3>Project #3</h3>
-                            <p>Clone Coding with HTML, CSS</p>
+                            <p>Clone Coding with JavaScript, React</p>
                         </div>
                     </a></li>
                 <li><a href="#" target="_blank">
                         <img src="images/projects/project4.webp" alt="project4">
                         <div>
                             <h3>Project #4</h3>
-                            <p>Clone Coding with HTML, CSS</p>
+                            <p>Clone Coding with JavaScript, React</p>
                         </div>
                     </a></li>
                 <li><a href="#" target="_blank">
                         <img src="images/projects/project5.webp" alt="project5">
                         <div>
                             <h3>Project #5</h3>
-                            <p>Clone Coding with HTML, CSS</p>
+                            <p>Clone Coding with TypeScript, React</p>
                         </div>
                     </a></li>
                 <li><a href="#" target="_blank">
                         <img src="images/projects/project6.webp" alt="project6">
                         <div>
                             <h3>Project #6</h3>
-                            <p>Clone Coding with HTML, CSS</p>
+                            <p>Clone Coding with TypeScript, React</p>
                         </div>
                     </a></li>
                 <li><a href="#" target="_blank">
                         <img src="images/projects/project7.webp" alt="project7">
                         <div>
                             <h3>Project #7</h3>
-                            <p>Clone Coding with HTML, CSS</p>
+                            <p>Clone Coding with TypeScript, NextJs</p>
                         </div>
                     </a></li>
                 <li><a href="#" target="_blank">
                         <img src="images/projects/project8.webp" alt="project8">
                         <div>
                             <h3>Project #8</h3>
-                            <p>Clone Coding with HTML, CSS</p>
+                            <p>Clone Coding with TypeScript, NextJs</p>
                         </div>
                     </a></li>
             </ul>
         </section>
         <!-- Testimonials -->
-        <section id="testimonial"></section>
+        <section id="testimonial">
+            <h2>Testimonial</h2>
+            <p>See what they say about me</p>
+            <ul>
+                <li>
+                    <img src="images/testimonials/people1.webp" alt="people1">
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe est ullam consequatur minima
+                            ratione tempore dolores. Ea magni excepturi soluta consectetur eos optio repellat nesciunt.
+                            Optio vitae maiores dolorum tempora!
+                        </p>
+                        <p><a href="#">James Kim</a> /Google</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/testimonials/people2.webp" alt="people2">
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum architecto odio deserunt
+                            odit obcaecati maxime, dolorem laboriosam consequatur recusandae enim eius ratione eaque.
+                            Quae ipsum inventore accusamus alias, dignissimos consectetur.
+                        </p>
+                        <p><a href="#">Oppenheimer</a> /Samsung</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="images/testimonials/people3.webp" alt="people3">
+                    <div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere ipsam animi sequi
+                            velit id sunt sed commodi distinctio earum quasi impedit, necessitatibus quibusdam veritatis
+                            maxime veniam deserunt fugiat. Magnam?
+                        </p>
+                        <p><a href="#">Anna Jin</a> /Samsung</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
         <!-- Arrow up -->
         <aside></aside>
     </main>
