--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <img src="images/jobs/google.png" alt="google logo">
                     <div>
                         <p>Google as Software Engineer</p>
-                        <p>2023 Jan - Unitil now</p>
+                        <p>2023 Jan - Until now</p>
                     </div>
                 </li>
                 <li>
@@ -295,10 +295,30 @@
             </ul>
         </section>
         <!-- Arrow up -->
-        <aside></aside>
+        <aside>
+            <a href="#home" title="back to top">
+                <i class="fa-solid fa-arrow-up"></i>
+            </a>
+        </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact"></footer>
+    <footer id="contact">
+        <h2>Let&#39;s talk</h2>
+        <p>dream.coder.ryuji@gmail.com</p>
+        <ul>
+            <li>
+                <a href="https://github.com/wBeeDev/portfolio" target="_blank" title="my github link">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/wBeeDev/portfolio" target="_blank" title="my linkedin link">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </li>
+        </ul>
+        <p>©Dream Coding Ryuji - All rights reserved</p>
+    </footer>
 </body>
 
 </html>
