--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 
 <body>
     <!-- Header -->
-    <header>
-        <div>
-            <img src="images/profile-round.png" alt="logo">
-            <h1><a href="#">Ryuji</a></h1>
+    <header class="header">
+        <div class="header__logo">
+            <img class="header__logo__img" src="images/profile-round.png" alt="logo">
+            <h1 class="header__logo__title"><a href="#">Ryuji</a></h1>
         </div>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#work">My work</a></li>
-                <li><a href="#testimonial">Testimonial</a></li>
-                <li><a href="#contact">Contact</a></li>
+            <ul class="header__menu">
+                <li><a class="header__menu__item active" href="#home">Home</a></li>
+                <li><a class="header__menu__item" href="#about">About</a></li>
+                <li><a class="header__menu__item" href="#skills">Skills</a></li>
+                <li><a class="header__menu__item" href="#work">My work</a></li>
+                <li><a class="header__menu__item" href="#testimonial">Testimonial</a></li>
+                <li><a class="header__menu__item" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
