CSS: Home + Common

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <nav>
             <ul class="header__menu">
-                <li><a class="header__menu__item active" href="#home">Home</a></li>
+                <li><a class="header__menu__item" href="#home">Home</a></li>
                 <li><a class="header__menu__item" href="#about">About</a></li>
                 <li><a class="header__menu__item" href="#skills">Skills</a></li>
                 <li><a class="header__menu__item" href="#work">My work</a></li>
@@ -48,15 +48,18 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img src="images/profile.png" alt="Ryuji's profile">
-            <h2>Hello I&#39;m Dream Coder, Ryuji</h2>
-            <p>A new Software Engineer in Gunpo, South Korea</p>
-            <a href="#contact">Contact Me</a>
+            <img class="home__avatar" src="images/profile.png" alt="Ryuji's profile">
+            <h2 class="home__title">
+                Hello <br />I&#39;m <strong class="home__title--strong">Dream Coder</strong>, Ryuji
+            </h2>
+            <p class="home__description">A new Software Engineer in Gunpo, South Korea</p>
+            <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about">
-            <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis mattis est. Pellentesque habitant
+        <section id="about" class="section">
+            <h2 class="title">About me</h2>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis mattis est.
+                Pellentesque habitant
                 morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque sollicitudin nunc
                 non nunc pellentesque dignissim. In hac habitasse platea dictumst. Suspendisse cursus ligula eget
                 elementum feugiat. Quisque a justo egestas, varius turpis non, fermentum metus. Duis aliquam elementum
@@ -97,9 +100,9 @@
             </ul>
         </section>
         <!-- Skills -->
-        <section id="skills">
-            <h2>My Skills</h2>
-            <p>Skills & Attributes</p>
+        <section id="skills" class="section">
+            <h2 class="title">My Skills</h2>
+            <p class="description">Skills & Attributes</p>
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, sequi fuga! Optio tenetur qui, aspernatur
                 saepe nulla dolorum ea repellendus totam vitae autem sapiente, excepturi dicta debitis, placeat vel?
@@ -186,9 +189,9 @@
             </div>
         </section>
         <!-- Work -->
-        <section id="work">
-            <h2>My work</h2>
-            <p>Projects</p>
+        <section id="work" class="section">
+            <h2 class="title">My work</h2>
+            <p class="description">Projects</p>
             <ul>
                 <li><button>All <span>8</span></button></li>
                 <li><button>Front-end <span>3</span></button></li>
@@ -255,9 +258,9 @@
             </ul>
         </section>
         <!-- Testimonials -->
-        <section id="testimonial">
-            <h2>Testimonial</h2>
-            <p>See what they say about me</p>
+        <section id="testimonial" class="section">
+            <h2 class="title">Testimonial</h2>
+            <p class="description">See what they say about me</p>
             <ul>
                 <li>
                     <img src="images/testimonials/people1.webp" alt="people1">
@@ -302,9 +305,9 @@
         </aside>
     </main>
     <!-- Footer -->
-    <footer id="contact">
-        <h2>Let&#39;s talk</h2>
-        <p>dream.coder.ryuji@gmail.com</p>
+    <footer id="contact" class="section">
+        <h2 class="title">Let&#39;s talk</h2>
+        <p class="description">dream.coder.ryuji@gmail.com</p>
         <ul>
             <li>
                 <a href="https://github.com/wBeeDev/portfolio" target="_blank" title="my github link">
