--- a/index.html
+++ b/index.html
@@ -56,45 +56,41 @@
             <a class="home__contact" href="#contact">Contact Me</a>
         </section>
         <!-- About -->
-        <section id="about" class="section">
+        <section id="about" class="section max-container">
             <h2 class="title">About me</h2>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis mattis est.
-                Pellentesque habitant
-                morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque sollicitudin nunc
-                non nunc pellentesque dignissim. In hac habitasse platea dictumst. Suspendisse cursus ligula eget
-                elementum feugiat. Quisque a justo egestas, varius turpis non, fermentum metus. Duis aliquam elementum
-                sodales. Ut id sem et velit pretium semper ac eget lectus. Morbi nec nisi vitae ante semper ultricies
-                tincidunt nec lectus.</p>
-            <ul>
-                <li>
-                    <i class="fa-brands fa-square-js"></i>
-                    <p>Front-end</p>
+            <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti voluptate delectus
+                tenetur ab, nam magni animi cupiditate, saepe voluptates facilis praesentium, inventore obcaecati cumque
+                consequatur architecto aspernatur hic suscipit ea?</p>
+            <ul class="majors">
+                <li class="major">
+                    <i class="fa-brands fa-square-js major__icon"></i>
+                    <p class="major__title">Front-end</p>
                     <p>HTML, CSS, JavaScript, TypeScript, React, NextJs</p>
                 </li>
-                <li>
-                    <i class="fa-solid fa-server"></i>
-                    <p>Back-end</p>
+                <li class="major">
+                    <i class="fa-solid fa-server major__icon"></i>
+                    <p class="major__title">Back-end</p>
                     <p>Java, JavaScript, NodeJs, Rest APIs</p>
                 </li>
-                <li>
-                    <i class="fa-solid fa-mobile"></i>
-                    <p>Mobile</p>
+                <li class="major">
+                    <i class="fa-solid fa-mobile major__icon"></i>
+                    <p class="major__title">Mobile</p>
                     <p>Android, iOS, React Navtive, Flutter, Java, Swift, Kotlin</p>
                 </li>
             </ul>
-            <ul>
-                <li>
+            <ul class="jobs">
+                <li class="job">
                     <img src="images/jobs/google.png" alt="google logo">
                     <div>
-                        <p>Google as Software Engineer</p>
-                        <p>2023 Jan - Until now</p>
+                        <p class="job__name">Google as Software Engineer</p>
+                        <p class="job__period">2023 Jan - Until now</p>
                     </div>
                 </li>
-                <li>
+                <li class="job">
                     <img src="images/jobs/samsung.png" alt="samsung logo">
                     <div>
-                        <p>Samsung as Software Engineer</p>
-                        <p>2022 Jun - 2022 Dec</p>
+                        <p class="job__name">Samsung as Software Engineer</p>
+                        <p class="job__period">2022 Jun - 2022 Dec</p>
                     </div>
                 </li>
             </ul>
