--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <nav>
             <ul class="header__menu">
-                <li><a class="header__menu__item" href="#home">Home</a></li>
+                <li><a class="header__menu__item active" href="#home">Home</a></li>
                 <li><a class="header__menu__item" href="#about">About</a></li>
                 <li><a class="header__menu__item" href="#skills">Skills</a></li>
                 <li><a class="header__menu__item" href="#work">My work</a></li>
@@ -75,7 +75,7 @@
                 <li class="major">
                     <i class="fa-solid fa-mobile major__icon"></i>
                     <p class="major__title">Mobile</p>
-                    <p>Android, iOS, React Navtive, Flutter, Java, Swift, Kotlin</p>
+                    <p>Android, iOS, React Navtive, Swift, Kotlin</p>
                 </li>
             </ul>
             <ul class="jobs">
@@ -97,91 +97,94 @@
         </section>
         <!-- Skills -->
         <section id="skills" class="section">
-            <h2 class="title">My Skills</h2>
-            <p class="description">Skills & Attributes</p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, sequi fuga! Optio tenetur qui, aspernatur
-                saepe nulla dolorum ea repellendus totam vitae autem sapiente, excepturi dicta debitis, placeat vel?
-                Facere?
-            </p>
-            <div>
-                <section>
-                    <h3>Coding Skills</h3>
-                    <ul>
-                        <li>
-                            <div>
-                                <span>HTML</span>
-                                <span>95%</span>
-                            </div>
-                            <div>
-                                <div style="width: 98%"></div>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <span>CSS</span>
-                                <span>90%</span>
-                            </div>
-                            <div>
-                                <div style="width: 98%"></div>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <span>JavaScript</span>
-                                <span>90%</span>
-                            </div>
-                            <div>
-                                <div style="width: 98%"></div>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <span>TypeScript</span>
-                                <span>80%</span>
-                            </div>
-                            <div>
-                                <div style="width: 98%"></div>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <span>React</span>
-                                <span>75%</span>
-                            </div>
-                            <div>
-                                <div style="width: 98%"></div>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <span>NodeJs</span>
-                                <span>70%</span>
-                            </div>
-                            <div>
-                                <div style="width: 98%"></div>
-                            </div>
-                        </li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Tools</h3>
-                    <ul>
-                        <li>Visual Studio Code</li>
-                        <li>IntelliJ</li>
-                        <li>Android Studio Code</li>
-                        <li>iOS development tools</li>
-                        <li>Sketch app</li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Etc</h3>
-                    <ul>
-                        <li>Git</li>
-                        <li>Scrum Master</li>
-                        <li>Figma</li>
-                    </ul>
-                </section>
+            <div class="max-container">
+                <h2 class="title">My Skills</h2>
+                <p class="description">Skills & Attributes</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, sequi fuga! Optio tenetur qui,
+                    aspernatur
+                    saepe nulla dolorum ea repellendus totam vitae autem sapiente, excepturi dicta debitis, placeat vel?
+                    Facere?
+                </p>
+                <div class="skills">
+                    <section class="skills__coding">
+                        <h3 class="skills__title">Coding Skills</h3>
+                        <ul>
+                            <li class="bar">
+                                <div class="bar__metadata">
+                                    <span>HTML</span>
+                                    <span>95%</span>
+                                </div>
+                                <div class="bar__bg">
+                                    <div class="bar__value" style="width: 95%"></div>
+                                </div>
+                            </li>
+                            <li class="bar">
+                                <div class="bar__metadata">
+                                    <span>CSS</span>
+                                    <span>95%</span>
+                                </div>
+                                <div class="bar__bg">
+                                    <div class="bar__value" style="width: 95%"></div>
+                                </div>
+                            </li>
+                            <li class="bar">
+                                <div class="bar__metadata">
+                                    <span>JavaScript</span>
+                                    <span>90%</span>
+                                </div>
+                                <div class="bar__bg">
+                                    <div class="bar__value" style="width: 90%"></div>
+                                </div>
+                            </li>
+                            <li class="bar">
+                                <div class="bar__metadata">
+                                    <span>TypeScript</span>
+                                    <span>80%</span>
+                                </div>
+                                <div class="bar__bg">
+                                    <div class="bar__value" style="width: 80%"></div>
+                                </div>
+                            </li>
+                            <li class="bar">
+                                <div class="bar__metadata">
+                                    <span>React</span>
+                                    <span>75%</span>
+                                </div>
+                                <div class="bar__bg">
+                                    <div class="bar__value" style="width: 75%"></div>
+                                </div>
+                            </li>
+                            <li class="bar">
+                                <div class="bar__metadata">
+                                    <span>NodeJs</span>
+                                    <span>70%</span>
+                                </div>
+                                <div class="bar__bg">
+                                    <div class="bar__value" style="width: 70%"></div>
+                                </div>
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="skills__tools">
+                        <h3 class="skills__title">Tools</h3>
+                        <ul>
+                            <li>Visual Studio Code</li>
+                            <li>IntelliJ</li>
+                            <li>Android Studio Code</li>
+                            <li>iOS development tools</li>
+                            <li>Sketch app</li>
+                        </ul>
+                    </section>
+                    <section class="skills__etc">
+                        <h3 class="skills__title">Etc</h3>
+                        <ul>
+                            <li>Git</li>
+                            <li>Scrum Master</li>
+                            <li>Figma</li>
+                        </ul>
+                    </section>
+                </div>
             </div>
         </section>
         <!-- Work -->
