--- a/index.html
+++ b/index.html
@@ -189,72 +189,90 @@
         </section>
         <!-- Work -->
         <section id="work" class="section">
-            <h2 class="title">My work</h2>
-            <p class="description">Projects</p>
-            <ul>
-                <li><button>All <span>8</span></button></li>
-                <li><button>Front-end <span>3</span></button></li>
-                <li><button>Back-end <span>3</span></button></li>
-                <li><button>Mobile <span>2</span></button></li>
-            </ul>
-            <ul>
-                <li><a href="#" target="_blank">
-                        <img src="images/projects/project1.webp" alt="project1">
-                        <div>
-                            <h3>Project #1</h3>
-                            <p>Clone Coding with HTML, CSS, JavaScript</p>
-                        </div>
-                    </a></li>
-                <li><a href="#" target="_blank">
-                        <img src="images/projects/project2.webp" alt="project2">
-                        <div>
-                            <h3>Project #2</h3>
-                            <p>Clone Coding with HTML, CSS, JavaScript</p>
-                        </div>
-                    </a></li>
-                <li><a href="#" target="_blank">
-                        <img src="images/projects/project3.webp" alt="project3">
-                        <div>
-                            <h3>Project #3</h3>
-                            <p>Clone Coding with JavaScript, React</p>
-                        </div>
-                    </a></li>
-                <li><a href="#" target="_blank">
-                        <img src="images/projects/project4.webp" alt="project4">
-                        <div>
-                            <h3>Project #4</h3>
-                            <p>Clone Coding with JavaScript, React</p>
-                        </div>
-                    </a></li>
-                <li><a href="#" target="_blank">
-                        <img src="images/projects/project5.webp" alt="project5">
-                        <div>
-                            <h3>Project #5</h3>
-                            <p>Clone Coding with TypeScript, React</p>
-                        </div>
-                    </a></li>
-                <li><a href="#" target="_blank">
-                        <img src="images/projects/project6.webp" alt="project6">
-                        <div>
-                            <h3>Project #6</h3>
-                            <p>Clone Coding with TypeScript, React</p>
-                        </div>
-                    </a></li>
-                <li><a href="#" target="_blank">
-                        <img src="images/projects/project7.webp" alt="project7">
-                        <div>
-                            <h3>Project #7</h3>
-                            <p>Clone Coding with TypeScript, NextJs</p>
-                        </div>
-                    </a></li>
-                <li><a href="#" target="_blank">
-                        <img src="images/projects/project8.webp" alt="project8">
-                        <div>
-                            <h3>Project #8</h3>
-                            <p>Clone Coding with TypeScript, NextJs</p>
-                        </div>
-                    </a></li>
-            </ul>
+            <div class="max-container">
+                <h2 class="title">My work</h2>
+                <p class="description">Projects</p>
+                <ul class="categories">
+                    <li>
+                        <button class="category category--selected">
+                            All <span class="category__count">8</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="category">
+                            Front-end <span class="category__count">3</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="category">
+                            Back-end <span class="category__count">3</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="category">
+                            Mobile <span class="category__count">2</span>
+                        </button>
+                    </li>
+                </ul>
+                <ul class="projects">
+                    <li class="project"><a href="#" target="_blank">
+                            <img src="images/projects/project1.webp" alt="project1" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #1</h3>
+                                <p>Clone Coding with HTML, CSS, JavaScript</p>
+                            </div>
+                        </a></li>
+                    <li class="project"><a href="#" target="_blank">
+                            <img src="images/projects/project2.webp" alt="project2" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #2</h3>
+                                <p>Clone Coding with HTML, CSS, JavaScript</p>
+                            </div>
+                        </a></li>
+                    <li class="project"><a href="#" target="_blank">
+                            <img src="images/projects/project3.webp" alt="project3" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #3</h3>
+                                <p>Clone Coding with JavaScript, React</p>
+                            </div>
+                        </a></li>
+                    <li class="project"><a href="#" target="_blank">
+                            <img src="images/projects/project4.webp" alt="project4" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #4</h3>
+                                <p>Clone Coding with JavaScript, React</p>
+                            </div>
+                        </a></li>
+                    <li class="project"><a href="#" target="_blank">
+                            <img src="images/projects/project5.webp" alt="project5" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #5</h3>
+                                <p>Clone Coding with TypeScript, React</p>
+                            </div>
+                        </a></li>
+                    <li class="project"><a href="#" target="_blank">
+                            <img src="images/projects/project6.webp" alt="project6" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #6</h3>
+                                <p>Clone Coding with TypeScript, React</p>
+                            </div>
+                        </a></li>
+                    <li class="project"><a href="#" target="_blank">
+                            <img src="images/projects/project7.webp" alt="project7" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #7</h3>
+                                <p>Clone Coding with TypeScript, NextJs</p>
+                            </div>
+                        </a></li>
+                    <li class="project"><a href="#" target="_blank">
+                            <img src="images/projects/project8.webp" alt="project8" class="project__img">
+                            <div class="project__metadata">
+                                <h3 class="project__title">Project #8</h3>
+                                <p>Clone Coding with TypeScript, NextJs</p>
+                            </div>
+                        </a></li>
+                </ul>
+            </div>
         </section>
         <!-- Testimonials -->
         <section id="testimonial" class="section">
