--- a/index.html
+++ b/index.html
@@ -275,41 +275,41 @@
             </div>
         </section>
         <!-- Testimonials -->
-        <section id="testimonial" class="section">
+        <section id="testimonial" class="section max-container">
             <h2 class="title">Testimonial</h2>
             <p class="description">See what they say about me</p>
             <ul>
-                <li>
-                    <img src="images/testimonials/people1.webp" alt="people1">
-                    <div>
+                <li class="testimonial">
+                    <img src="images/testimonials/people1.webp" alt="people1" class="testimonial__img">
+                    <div class="testimonial__bubble">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe est ullam consequatur minima
                             ratione tempore dolores. Ea magni excepturi soluta consectetur eos optio repellat nesciunt.
                             Optio vitae maiores dolorum tempora!
                         </p>
-                        <p><a href="#">James Kim</a> /Google</p>
+                        <p><a href="#" class="testimonial__bubble__name">James Kim</a> /Google</p>
                     </div>
                 </li>
-                <li>
-                    <img src="images/testimonials/people2.webp" alt="people2">
-                    <div>
+                <li class="testimonial">
+                    <img src="images/testimonials/people2.webp" alt="people2" class="testimonial__img">
+                    <div class="testimonial__bubble">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum architecto odio deserunt
                             odit obcaecati maxime, dolorem laboriosam consequatur recusandae enim eius ratione eaque.
                             Quae ipsum inventore accusamus alias, dignissimos consectetur.
                         </p>
-                        <p><a href="#">Oppenheimer</a> /Samsung</p>
+                        <p><a href="#" class="testimonial__bubble__name">Oppenheimer</a> /Samsung</p>
                     </div>
                 </li>
-                <li>
-                    <img src="images/testimonials/people3.webp" alt="people3">
-                    <div>
+                <li class="testimonial">
+                    <img src="images/testimonials/people3.webp" alt="people3" class="testimonial__img">
+                    <div class="testimonial__bubble">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque facere ipsam animi sequi
                             velit id sunt sed commodi distinctio earum quasi impedit, necessitatibus quibusdam veritatis
                             maxime veniam deserunt fugiat. Magnam?
                         </p>
-                        <p><a href="#">Anna Jin</a> /Samsung</p>
+                        <p><a href="#" class="testimonial__bubble__name">Anna Jin</a> /Samsung</p>
                     </div>
                 </li>
             </ul>
