--- a/index.html
+++ b/index.html
@@ -316,28 +316,32 @@
         </section>
         <!-- Arrow up -->
         <aside>
-            <a href="#home" title="back to top">
+            <a class="arrow-up" href="#home" title="back to top">
                 <i class="fa-solid fa-arrow-up"></i>
             </a>
         </aside>
     </main>
     <!-- Footer -->
     <footer id="contact" class="section">
-        <h2 class="title">Let&#39;s talk</h2>
-        <p class="description">dream.coder.ryuji@gmail.com</p>
-        <ul>
-            <li>
-                <a href="https://github.com/wBeeDev/portfolio" target="_blank" title="my github link">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://github.com/wBeeDev/portfolio" target="_blank" title="my linkedin link">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-            </li>
-        </ul>
-        <p>©Dream Coding Ryuji - All rights reserved</p>
+        <div class="max-container">
+            <h2 class="title">Let&#39;s talk</h2>
+            <p class="description">dream.coder.ryuji@gmail.com</p>
+            <ul class="contact__links">
+                <li>
+                    <a class="contact__link" href="https://github.com/wBeeDev/portfolio" target="_blank"
+                        title="my github link">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="contact__link" href="https://github.com/wBeeDev/portfolio" target="_blank"
+                        title="my linkedin link">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
+            <p>©Dream Coding Ryuji - All rights reserved</p>
+        </div>
     </footer>
 </body>
 
