--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <img class="home__avatar" src="images/profile.png" alt="Ryuji's profile">
-            <h2 class="home__title">
-                Hello <br />I&#39;m <strong class="home__title--strong">Dream Coder</strong>, Ryuji
-            </h2>
-            <p class="home__description">A new Software Engineer in Gunpo, South Korea</p>
-            <a class="home__contact" href="#contact">Contact Me</a>
+            <div class="home__container">
+                <img class="home__avatar" src="images/profile.png" alt="Ryuji's profile">
+                <h2 class="home__title">
+                    Hello <br />I&#39;m <strong class="home__title--strong">Dream Coder</strong>, Ryuji
+                </h2>
+                <p class="home__description">A new Software Engineer in Gunpo, South Korea</p>
+                <a class="home__contact" href="#contact">Contact Me</a>
+            </div>
         </section>
         <!-- About -->
         <section id="about" class="section max-container">
