--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- OG -->
     <meta property="og:title" content="Ryuji's Portfolio">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="배포 후 생성된 URL">
-    <meta property="og:image" content="배포 후에 생성된 이미지 URL">
+    <meta property="og:url" content="https://wbeedev.github.io/portfolio/">
+    <meta property="og:image" content="https://wbeedev.github.io/portfolio/images/og.webp">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
