JS: 타이핑 효과 주기

--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/8698bbbb02.js" crossorigin="anonymous"></script>
+    <!-- TypeIt -->
+    <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="/css/style.css">
     <!-- JavaScript -->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
     <script type="module" src="src/active_menu.js" defer></script>
+    <script type="module" src="src/type.js" defer></script>
 </head>
 
 <body>
@@ -53,9 +56,11 @@
     <main>
         <!-- Home -->
         <section id="home">
-            <div class="home__container">
+            <div class="max-container home__container">
                 <img class="home__avatar" src="images/profile.png" alt="Ryuji's profile">
-                <h2 class="home__title">
+            </div>
+            <div>
+                <h2 class="home__title" aria-label="Hello, I'm Dream Coder Ryuji">
                     Hello <br />I&#39;m <strong class="home__title--strong">Dream Coder</strong>, Ryuji
                 </h2>
                 <p class="home__description">A new Software Engineer in Gunpo, South Korea</p>
